[package]
name = "tengok"
version = "0.1.0"
edition = "2024"

[dependencies]
ignore = "0.4"        # fast recursive walker (same as ripgrep uses)
humansize = "2"       # for human-readable sizes
owo-colors = "4"      # for optional color (nice but not required)
unicode-width = "0.1" # for accurate character width calculation
crossbeam-channel = "0.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "symbols"