[dependencies]
ignore = "0.4"        # fast recursive walker (same as ripgrep uses)
humansize = "2"       # for human-readable sizes
owo-colors = "4"      # for optional color (nice but not required)
unicode-width = "0.1" # for accurate character width calculation
crossbeam-channel = "0.5"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "symbols"

[package]
name = "tengok"
version = "0.1.0"
edition = "2024"
description = "Your folder summary CLI"
repository = "https://github.com/skolhustick/tengok"
homepage = "https://github.com/skolhustick/tengok"
readme = "README.md"
license = "MIT"
keywords = ["cli", "filesystem", "summary"]
categories = ["command-line-utilities"]

[[bin]]
name = "tengok"
path = "src/main.rs"
